refactor, comments, logs, monitor
